ENG-0000 fix(portal,1ui): Fix SHAs for CI runs (#486)
## Affected Packages

Apps

- [x] portal

Packages

- [x] 1ui
- [ ] api
- [ ] protocol
- [ ] sdk

Tools

- [ ] tools

## Overview

Used Nx [offical docs
](https://nx.dev/ci/recipes/set-up/monorepo-ci-github-actions#get-the-commit-of-the-last-successful-build)
to configure BASE and HEAD as env variables

## Screen Captures

If applicable, add screenshots or screen captures of your changes.

## Declaration

- [x] I hereby declare that I have abided by the rules and regulations
as outlined in the
[CONTRIBUTING.md](https://github.com/0xIntuition/intuition-ts/blob/main/CONTRIBUTING.md)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,11 @@ on:
       - main
   pull_request:
 
+# Needed for nx-set-shas when run on the main branch
+permissions:
+  actions: read
+  contents: read
+
 jobs:
   build-test-release:
     runs-on: ubuntu-latest
@@ -37,21 +42,14 @@ jobs:
           key: ${{ runner.os }}-pnpm-${{ hashFiles('**/pnpm-lock.yaml') }}
           restore-keys: |
             ${{ runner.os }}-pnpm-
+
       - run: pnpm install --frozen-lockfile
-      - name: Set Shas
-        uses: nrwl/nx-set-shas@v3
 
-      - name: Run Affected Lint
-        if: github.event_name == 'pull_request'
-        run: pnpm nx affected -t lint --base=origin/main~1 --head=origin/main
+      - name: Set SHAs
+        uses: nrwl/nx-set-shas@v4
 
-      - name: Run Affected Tests
-        if: github.event_name == 'pull_request'
-        run: pnpm nx affected -t test --base=origin/main~1 --head=origin/main
-
-      - name: Run Affected Builds
-        if: github.event_name == 'pull_request'
-        run: pnpm nx affected -t build --base=origin/main~1 --head=origin/main
+      - name: Run Affected Targets
+        run: npx nx affected -t lint test build
 
       - name: Build 1ui Storybook
         if: github.ref == 'refs/heads/main'
