ENG-0000 feat(api): Setup codegen for staging and prod envs (#693)
## Affected Packages

Apps

- [ ] portal

Packages

- [ ] 1ui
- [x] api
- [ ] protocol
- [ ] sdk

Tools

- [ ] tools

## Overview

I found it prudent to run codegen in the individual workflows as opposed
to dumping it in the Dockerfile of portal. This way we can keep that
Dockerfile focused on building portal and not generating packages

--- a/.github/workflows/deploy_dev.yml
+++ b/.github/workflows/deploy_dev.yml
@@ -56,8 +56,7 @@ jobs:
         run: pnpm install
 
       - name: Run codegen for API package
-        run: |
-          cd packages/api
+        run:
           API_URL=https://dev.api.intuition.systems pnpm run codegen
 
       - name: Configure AWS credentials
