ENG-0000 feat(portal): add verified auth token to privy token auth calls (#788)
## Affected Packages

Apps

- [x] portal

Packages

- [ ] 1ui
- [ ] api
- [ ] protocol
- [ ] sdk

Tools

- [ ] tools

## Overview

- Passes in the verification token to our verification calls

--- a/.github/workflows/deploy_dev.yml
+++ b/.github/workflows/deploy_dev.yml
@@ -88,6 +88,7 @@ jobs:
           --build-arg API_KEY=${{ secrets.API_KEY }} \
           --build-arg PRIVY_APP_ID=${{ secrets.PRIVY_APP_ID }} \
           --build-arg PRIVY_APP_SECRET=${{ secrets.PRIVY_APP_SECRET }} \
+          --build-arg PRIVY_VERIFICATION_KEY=${{ secrets.PRIVY_VERIFICATION_KEY_DEV }} \
           --build-arg CLOUDINARY_CLOUD_NAME=${{ secrets.CLOUDINARY_CLOUD_NAME }} \
           --build-arg CLOUDINARY_API_KEY=${{ secrets.CLOUDINARY_API_KEY }} \
           --build-arg CLOUDINARY_API_SECRET=${{ secrets.CLOUDINARY_API_SECRET }} \
