--- a/.github/workflows/deploy_staging.yml
+++ b/.github/workflows/deploy_staging.yml
@@ -89,6 +89,7 @@ jobs:
           --build-arg API_KEY=${{ secrets.API_KEY }} \
           --build-arg PRIVY_APP_ID=${{ secrets.PRIVY_APP_ID_STAGING }} \
           --build-arg PRIVY_APP_SECRET=${{ secrets.PRIVY_APP_SECRET_STAGING }} \
+          --build-arg PRIVY_VERIFICATION_KEY=${{ secrets.PRIVY_VERIFICATION_KEY_PROD }} \
           --build-arg CLOUDINARY_CLOUD_NAME=${{ secrets.CLOUDINARY_CLOUD_NAME }} \
           --build-arg CLOUDINARY_API_KEY=${{ secrets.CLOUDINARY_API_KEY }} \
           --build-arg CLOUDINARY_API_SECRET=${{ secrets.CLOUDINARY_API_SECRET }} \
