--- a/apps/portal/Dockerfile
+++ b/apps/portal/Dockerfile
@@ -11,6 +11,7 @@ ARG API_URL=${API_URL}
 ARG API_KEY=${API_KEY}
 ARG PRIVY_APP_ID=${PRIVY_APP_ID}
 ARG PRIVY_APP_SECRET=${PRIVY_APP_SECRET}
+ARG PRIVY_VERIFICATION_KEY=${PRIVY_VERIFICATION_KEY}
 ARG CLOUDINARY_CLOUD_NAME=${CLOUDINARY_CLOUD_NAME}
 ARG CLOUDINARY_API_KEY=${CLOUDINARY_API_KEY}
 ARG CLOUDINARY_API_SECRET=${CLOUDINARY_API_SECRET}
@@ -38,6 +39,7 @@ ENV API_URL=${API_URL}
 ENV API_KEY=${API_KEY}
 ENV PRIVY_APP_ID=${PRIVY_APP_ID}
 ENV PRIVY_APP_SECRET=${PRIVY_APP_SECRET}
+ENV PRIVY_VERIFICATION_KEY=${PRIVY_VERIFICATION_KEY}
 ENV CLOUDINARY_CLOUD_NAME=${CLOUDINARY_CLOUD_NAME}
 ENV CLOUDINARY_API_KEY=${CLOUDINARY_API_KEY}
 ENV CLOUDINARY_API_SECRET=${CLOUDINARY_API_SECRET}
