ENG-4524 feat(data-populator): add render.yaml and dockerfile for deployment (#874)
- Extends work by @auroter -- I updated the `render.yaml` and `Dockerfile` to match the newly pruned `.env`
- Signed-off-by: Auroter <7332587+auroter@users.noreply.github.com>
- Co-authored-by: Auroter <seangherardi@gmail.com>
- Co-authored-by: Auroter <7332587+auroter@users.noreply.github.com>

--- a/apps/data-populator/Dockerfile
+++ b/apps/data-populator/Dockerfile
@@ -1,62 +1,64 @@
 FROM docker.io/node:lts-alpine as base
 
-ARG ALCHEMY_MAINNET_API_KEY=${ALCHEMY_MAINNET_API_KEY}
-ARG ALCHEMY_API_KEY=${ALCHEMY_API_KEY}
-ARG ALCHEMY_MAINNET_RPC_URL=${ALCHEMY_MAINNET_RPC_URL}
-ARG ALCHEMY_BASE_SEPOLIA_RPC_URL=${ALCHEMY_BASE_SEPOLIA_RPC_URL}
-ARG ALCHEMY_BASE_RPC_URL=${ALCHEMY_BASE_RPC_URL}
-ARG WALLETCONNECT_PROJECT_ID=${WALLETCONNECT_PROJECT_ID}
-ARG SESSION_SECRET=${SESSION_SECRET}
-ARG API_URL=${API_URL}
-ARG API_KEY=${API_KEY}
-ARG PRIVY_APP_ID=${PRIVY_APP_ID}
-ARG PRIVY_APP_SECRET=${PRIVY_APP_SECRET}
-ARG PRIVY_VERIFICATION_KEY=${PRIVY_VERIFICATION_KEY}
-ARG CLOUDINARY_CLOUD_NAME=${CLOUDINARY_CLOUD_NAME}
-ARG CLOUDINARY_API_KEY=${CLOUDINARY_API_KEY}
-ARG CLOUDINARY_API_SECRET=${CLOUDINARY_API_SECRET}
-ARG SENTRY_AUTH_TOKEN=${SENTRY_AUTH_TOKEN}
-ARG SENTRY_DSN=${SENTRY_DSN}
-ARG SENTRY_ORG=${SENTRY_ORG}
-ARG SENTRY_PROJECT=${SENTRY_PROJECT}
-ARG ORIGIN_URL=${ORIGIN_URL}
-ARG PHOSPHOR_API_KEY=${PHOSPHOR_API_KEY}
-ARG PHOSPHOR_ADMIN_API_URL=${PHOSPHOR_ADMIN_API_URL}
-ARG PHOSPHOR_COLLECTION_ID=${PHOSPHOR_COLLECTION_ID}
-ARG GTM_TRACKING_ID=${GTM_TRACKING_ID}
-ARG FF_FULL_LOCKDOWN_ENABLED=${FF_FULL_LOCKDOWN_ENABLED}
-ARG FF_INCIDENT_BANNER_ENABLED=${FF_INCIDENT_BANNER_ENABLED}
-ARG FF_GENERIC_BANNER_ENABLED=${FF_GENERIC_BANNER_ENABLED}
-ARG VITE_DEPLOY_ENV=${VITE_DEPLOY_ENV}
+ARG PINATA_JWT_KEY
+ARG PINATA_GATEWAY_KEY
+ARG IPFS_GATEWAY
+ARG ATTEST_CONTRACT_ADDRESS
+ARG ATTEST_CONTRACT_ADDRESS_DEV
+ARG MULTIVAULT_CONTRACT_ADDRESS
+ARG MULTIVAULT_CONTRACT_ADDRESS_DEV
+ARG PRIVATE_KEY
+ARG PRIVATE_KEY_DEV
+ARG EVM_RPC
+ARG EVM_RPC_DEV
+ARG ADDITIONAL_STAKE_ATOM
+ARG ADDITIONAL_STAKE_TRIPLE
+ARG CLOUDINARY_CLOUD_NAME
+ARG CLOUDINARY_API_KEY
+ARG CLOUDINARY_API_SECRET
+ARG SUPABASE_URL
+ARG SUPABASE_KEY
+ARG ENVIRONMENT
+ARG VITE_DEPLOY_ENV
+ARG MULTIVAULT_ADDRESS_BASE_SEPOLIA
+ARG MULTIVAULT_ADDRESS_BASE_MAINNET
+ARG ALCHEMY_BASE_SEPOLIA_RPC_URL
+ARG ALCHEMY_BASE_RPC_URL
+ARG SESSION_SECRET
+ARG ORIGIN_URL
+ARG PRIVY_APP_ID
+ARG PRIVY_AUTH_URL
+ARG PRIVY_APP_SECRET
 
-ENV ALCHEMY_MAINNET_API_KEY=${ALCHEMY_MAINNET_API_KEY}
-ENV ALCHEMY_API_KEY=${ALCHEMY_API_KEY}
-ENV ALCHEMY_MAINNET_RPC_URL=${ALCHEMY_MAINNET_RPC_URL}
-ENV ALCHEMY_BASE_SEPOLIA_RPC_URL=${ALCHEMY_BASE_SEPOLIA_RPC_URL}
-ENV ALCHEMY_BASE_RPC_URL=${ALCHEMY_BASE_RPC_URL}
-ENV WALLETCONNECT_PROJECT_ID=${WALLETCONNECT_PROJECT_ID}
-ENV SESSION_SECRET=${SESSION_SECRET}
-ENV API_URL=${API_URL}
-ENV API_KEY=${API_KEY}
-ENV PRIVY_APP_ID=${PRIVY_APP_ID}
-ENV PRIVY_APP_SECRET=${PRIVY_APP_SECRET}
-ENV PRIVY_VERIFICATION_KEY=${PRIVY_VERIFICATION_KEY}
+ENV PINATA_JWT_KEY=${PINATA_JWT_KEY}
+ENV PINATA_GATEWAY_KEY=${PINATA_GATEWAY_KEY}
+ENV IPFS_GATEWAY=${IPFS_GATEWAY}
+ENV ATTEST_CONTRACT_ADDRESS=${ATTEST_CONTRACT_ADDRESS}
+ENV ATTEST_CONTRACT_ADDRESS_DEV=${ATTEST_CONTRACT_ADDRESS_DEV}
+ENV MULTIVAULT_CONTRACT_ADDRESS=${MULTIVAULT_CONTRACT_ADDRESS}
+ENV MULTIVAULT_CONTRACT_ADDRESS_DEV=${MULTIVAULT_CONTRACT_ADDRESS_DEV}
+ENV PRIVATE_KEY=${PRIVATE_KEY}
+ENV PRIVATE_KEY_DEV=${PRIVATE_KEY_DEV}
+ENV EVM_RPC=${EVM_RPC}
+ENV EVM_RPC_DEV=${EVM_RPC_DEV}
+ENV ADDITIONAL_STAKE_ATOM=${ADDITIONAL_STAKE_ATOM}
+ENV ADDITIONAL_STAKE_TRIPLE=${ADDITIONAL_STAKE_TRIPLE}
 ENV CLOUDINARY_CLOUD_NAME=${CLOUDINARY_CLOUD_NAME}
 ENV CLOUDINARY_API_KEY=${CLOUDINARY_API_KEY}
 ENV CLOUDINARY_API_SECRET=${CLOUDINARY_API_SECRET}
-ENV SENTRY_PROJECT=${SENTRY_PROJECT}
-ENV SENTRY_AUTH_TOKEN=${SENTRY_AUTH_TOKEN}
-ENV SENTRY_DSN=${SENTRY_DSN}
-ENV SENTRY_ORG=${SENTRY_ORG}
-ENV ORIGIN_URL=${ORIGIN_URL}
-ENV PHOSPHOR_API_KEY=${PHOSPHOR_API_KEY}
-ENV PHOSPHOR_ADMIN_API_URL=${PHOSPHOR_ADMIN_API_URL}
-ENV PHOSPHOR_COLLECTION_ID=${PHOSPHOR_COLLECTION_ID}
-ENV GTM_TRACKING_ID=${GTM_TRACKING_ID}
-ENV FF_FULL_LOCKDOWN_ENABLED=${FF_FULL_LOCKDOWN_ENABLED}
-ENV FF_INCIDENT_BANNER_ENABLED=${FF_INCIDENT_BANNER_ENABLED}
-ENV FF_GENERIC_BANNER_ENABLED=${FF_GENERIC_BANNER_ENABLED}
+ENV SUPABASE_URL=${SUPABASE_URL}
+ENV SUPABASE_KEY=${SUPABASE_KEY}
+ENV ENVIRONMENT=${ENVIRONMENT}
 ENV VITE_DEPLOY_ENV=${VITE_DEPLOY_ENV}
+ENV MULTIVAULT_ADDRESS_BASE_SEPOLIA=${MULTIVAULT_ADDRESS_BASE_SEPOLIA}
+ENV MULTIVAULT_ADDRESS_BASE_MAINNET=${MULTIVAULT_ADDRESS_BASE_MAINNET}
+ENV ALCHEMY_BASE_SEPOLIA_RPC_URL=${ALCHEMY_BASE_SEPOLIA_RPC_URL}
+ENV ALCHEMY_BASE_RPC_URL=${ALCHEMY_BASE_RPC_URL}
+ENV SESSION_SECRET=${SESSION_SECRET}
+ENV ORIGIN_URL=${ORIGIN_URL}
+ENV PRIVY_APP_ID=${PRIVY_APP_ID}
+ENV PRIVY_AUTH_URL=${PRIVY_AUTH_URL}
+ENV PRIVY_APP_SECRET=${PRIVY_APP_SECRET}
 
 WORKDIR /app
 
