ENG-0000 fix(data-populator): fix render yaml (#875)
## Affected Packages

Apps

- [ ] portal
- [x] data-populator

Packages

- [ ] 1ui
- [ ] api
- [ ] protocol
- [ ] sdk

Tools

- [ ] tools

## Overview

Overview of the changes in the PR.

## Screen Captures

If applicable, add screenshots or screen captures of your changes.

## Declaration

- [ ] I hereby declare that I have abided by the rules and regulations
as outlined in the
[CONTRIBUTING.md](https://github.com/0xIntuition/intuition-ts/blob/main/CONTRIBUTING.md)

--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: data-populator
     env: docker
     region: oregon
-    rootDir: apps/data-populator
+    rootDir: .
     dockerfilePath: ./apps/data-populator/Dockerfile
     dockerContext: .
     envVars:
