ENG-4506 feat(data-populator): Add eoa handling (#877)
- Adds in branching support for EOAs (external wallets) in addition to
smart wallets. If a user uses their EOA a smart wallet isn't configured
and instead we fallback to using wagmi for the interactions and client.
- We added hooks and modified the `useBatchCreateAtom` to support and
streamline this. Our playground route still exists as a specific, clear
way to test the logic.
- @0xjojikun also cleaned up and streamlined our env vars. I updated the
`Dockerfile` but didn't touch the `render.yaml` yet as I wanted to
ensure that we're ready for those changes.
- Fixes some prettier/type issues on some of the service files -- unsure
why these were suddenly failing but they're fixed now and everything
passes.
- The `pnpm` version bump wasn't intentional -- we should doublecheck
this @0xjojikun -- it seems to have been added after I reinstalled
---------

Co-authored-by: 0xjojikun <jojikun@intuition.systems>
Co-authored-by: Auroter <seangherardi@gmail.com>

--- a/apps/data-populator/.env.example
+++ b/apps/data-populator/.env.example
@@ -2,28 +2,15 @@
 PINATA_JWT_KEY=
 PINATA_GATEWAY_KEY=
 IPFS_GATEWAY=
-ATTEST_CONTRACT_ADDRESS=0x430BbF52503Bd4801E51182f4cB9f8F534225DE5 # set to multivault b/c attestoor not working w/ triples
-ATTEST_CONTRACT_ADDRESS_DEV=0x1A6950807E33d5bC9975067e6D6b5Ea4cD661665
-MULTIVAULT_CONTRACT_ADDRESS=0x430BbF52503Bd4801E51182f4cB9f8F534225DE5
-MULTIVAULT_CONTRACT_ADDRESS_DEV=0x1A6950807E33d5bC9975067e6D6b5Ea4cD661665
 PRIVATE_KEY=
 PRIVATE_KEY_DEV=
-EVM_RPC=
-EVM_RPC_DEV=
 ADDITIONAL_STAKE_ATOM=100000000000 # 1e-7 ether (1^12)
 ADDITIONAL_STAKE_TRIPLE=100000000000 # 1e-7 ether (1^12)
 # SUPABASE
 SUPABASE_URL=
 SUPABASE_KEY=
 # ENVIRONMENT
-ENVIRONMENT=dev
 VITE_DEPLOY_ENV=development
-# MULTIVAULT ADDRESSES
-MULTIVAULT_ADDRESS_BASE_SEPOLIA=
-MULTIVAULT_ADDRESS_BASE_MAINNET=
-# ALCHEMY API KEYS AND RPC URLS (LOCAL)
-ALCHEMY_BASE_SEPOLIA_RPC_URL=
-ALCHEMY_BASE_RPC_URL=
 # CLOUDINARY
 CLOUDINARY_CLOUD_NAME=
 CLOUDINARY_API_KEY=
@@ -32,5 +19,6 @@ CLOUDINARY_API_SECRET=
 PRIVY_APP_ID=
 PRIVY_AUTH_URL=
 PRIVY_APP_SECRET=
-ORIGIN_URL=
-SESSION_SECRET=
+PRIVY_VERIFICATION_KEY=
+VITE_ORIGIN_URL=
+VITE_ALCHEMY_API_KEY=
