--- a/apps/data-populator/Dockerfile
+++ b/apps/data-populator/Dockerfile
@@ -3,14 +3,8 @@ FROM docker.io/node:lts-alpine as base
 ARG PINATA_JWT_KEY
 ARG PINATA_GATEWAY_KEY
 ARG IPFS_GATEWAY
-ARG ATTEST_CONTRACT_ADDRESS
-ARG ATTEST_CONTRACT_ADDRESS_DEV
-ARG MULTIVAULT_CONTRACT_ADDRESS
-ARG MULTIVAULT_CONTRACT_ADDRESS_DEV
 ARG PRIVATE_KEY
 ARG PRIVATE_KEY_DEV
-ARG EVM_RPC
-ARG EVM_RPC_DEV
 ARG ADDITIONAL_STAKE_ATOM
 ARG ADDITIONAL_STAKE_TRIPLE
 ARG CLOUDINARY_CLOUD_NAME
@@ -18,29 +12,21 @@ ARG CLOUDINARY_API_KEY
 ARG CLOUDINARY_API_SECRET
 ARG SUPABASE_URL
 ARG SUPABASE_KEY
-ARG ENVIRONMENT
 ARG VITE_DEPLOY_ENV
-ARG MULTIVAULT_ADDRESS_BASE_SEPOLIA
-ARG MULTIVAULT_ADDRESS_BASE_MAINNET
-ARG ALCHEMY_BASE_SEPOLIA_RPC_URL
-ARG ALCHEMY_BASE_RPC_URL
-ARG SESSION_SECRET
+ARG VITE_ALCHEMY_API_KEY
+ARG ALCHEMY_API_KEY
+ARG VITE_ORIGIN_URL
 ARG ORIGIN_URL
 ARG PRIVY_APP_ID
 ARG PRIVY_AUTH_URL
 ARG PRIVY_APP_SECRET
+ARG PRIVY_VERIFICATION_KEY
 
 ENV PINATA_JWT_KEY=${PINATA_JWT_KEY}
 ENV PINATA_GATEWAY_KEY=${PINATA_GATEWAY_KEY}
 ENV IPFS_GATEWAY=${IPFS_GATEWAY}
-ENV ATTEST_CONTRACT_ADDRESS=${ATTEST_CONTRACT_ADDRESS}
-ENV ATTEST_CONTRACT_ADDRESS_DEV=${ATTEST_CONTRACT_ADDRESS_DEV}
-ENV MULTIVAULT_CONTRACT_ADDRESS=${MULTIVAULT_CONTRACT_ADDRESS}
-ENV MULTIVAULT_CONTRACT_ADDRESS_DEV=${MULTIVAULT_CONTRACT_ADDRESS_DEV}
 ENV PRIVATE_KEY=${PRIVATE_KEY}
 ENV PRIVATE_KEY_DEV=${PRIVATE_KEY_DEV}
-ENV EVM_RPC=${EVM_RPC}
-ENV EVM_RPC_DEV=${EVM_RPC_DEV}
 ENV ADDITIONAL_STAKE_ATOM=${ADDITIONAL_STAKE_ATOM}
 ENV ADDITIONAL_STAKE_TRIPLE=${ADDITIONAL_STAKE_TRIPLE}
 ENV CLOUDINARY_CLOUD_NAME=${CLOUDINARY_CLOUD_NAME}
@@ -48,17 +34,15 @@ ENV CLOUDINARY_API_KEY=${CLOUDINARY_API_KEY}
 ENV CLOUDINARY_API_SECRET=${CLOUDINARY_API_SECRET}
 ENV SUPABASE_URL=${SUPABASE_URL}
 ENV SUPABASE_KEY=${SUPABASE_KEY}
-ENV ENVIRONMENT=${ENVIRONMENT}
 ENV VITE_DEPLOY_ENV=${VITE_DEPLOY_ENV}
-ENV MULTIVAULT_ADDRESS_BASE_SEPOLIA=${MULTIVAULT_ADDRESS_BASE_SEPOLIA}
-ENV MULTIVAULT_ADDRESS_BASE_MAINNET=${MULTIVAULT_ADDRESS_BASE_MAINNET}
-ENV ALCHEMY_BASE_SEPOLIA_RPC_URL=${ALCHEMY_BASE_SEPOLIA_RPC_URL}
-ENV ALCHEMY_BASE_RPC_URL=${ALCHEMY_BASE_RPC_URL}
-ENV SESSION_SECRET=${SESSION_SECRET}
+ENV VITE_ALCHEMY_API_KEY=${VITE_ALCHEMY_API_KEY}
+ENV ALCHEMY_API_KEY=${ALCHEMY_API_KEY}
+ENV VITE_ORIGIN_URL=${VITE_ORIGIN_URL}
 ENV ORIGIN_URL=${ORIGIN_URL}
 ENV PRIVY_APP_ID=${PRIVY_APP_ID}
-ENV PRIVY_AUTH_URL=${PRIVY_AUTH_URL}
 ENV PRIVY_APP_SECRET=${PRIVY_APP_SECRET}
+ENV PRIVY_AUTH_URL=${PRIVY_AUTH_URL}
+ENV PRIVY_VERIFICATION_KEY=${PRIVY_VERIFICATION_KEY}
 
 WORKDIR /app
 
@@ -90,7 +74,7 @@ FROM base as build
 RUN npm install -g nx@latest
 
 # Install dependencies
-RUN pnpm install --no-frozen-lockfile
+RUN pnpm install
 
 # Build the data-populator app
 RUN pnpm run data-populator:build
