ENG-4369 feat(graphql): graphql package scaffolding with codegen and patterns (#881)
- This PR is co-authored by @0xjojikun 
- Adds `0xintuition/graphql` package, codegen with support for
hooks/declarative loads, and client scaffolding
- Adds in several initial GraphQL fragments and queries
- Adds ability to use the `graphql` package in other apps within
monorepo
- Adds examples for dependent querying in `template` on a `/playground`
route -- this is temporary and will be removed from the `template` and
moved to Storybook stories in an upcoming PR

--- a/package.json
+++ b/package.json
@@ -29,6 +29,12 @@
     "data-populator:lint": "nx lint @0xintuition/data-populator",
     "data-populator:test": "nx test @0xintuition/data-populator --reporter=verbose",
     "data-populator:typecheck": "nx typecheck @0xintuition/data-populator",
+    "graphql:dev": "nx dev @0xintuition/graphql",
+    "graphql:build": "nx build @0xintuition/graphql",
+    "graphql:lint": "nx lint @0xintuition/graphql",
+    "graphql:test": "nx test @0xintuition/graphql --reporter=verbose",
+    "graphql:codegen": "nx codegen @0xintuition/graphql",
+    "graphql:typecheck": "nx typecheck @0xintuition/graphql",
     "protocol:build": "nx build @0xintuition/protocol",
     "protocol:lint": "nx lint @0xintuition/protocol",
     "protocol:test": "nx test @0xintuition/protocol --reporter=verbose",
