ENG-0000 feat(repo): Setup graphql versioning & packaging (#964)
* Triage versioning & add process for testing bundling w/ dry runs &
verdaccio
* Improve graphql package building
* Add watch for development, disable watch for production
* Update readme

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,23 @@
 node_modules/
 .vscode/
 out/
-dist/
+/dist/
 tmp/
 
 .nx/cache
+.nx/workspace-data
 packages/1ui/storybook-static
 
 .env*
 !.env.example
 .secrets
 act.sh
+
+# Verdaccio local registry files
+.verdaccio-db.json
+.npmrc
+
+# Build outputs
+/dist/
+**/dist/
+packages/*/dist/
