--- a/packages/graphql/package.json
+++ b/packages/graphql/package.json
@@ -1,28 +1,44 @@
 {
   "name": "@0xintuition/graphql",
-  "version": "0.1.0",
   "description": "GraphQL",
-  "main": "src/index.js",
+  "version": "0.2.0",
+  "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
   "exports": {
-    ".": "./src/index.js"
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.js"
+    }
   },
-  "types": "src/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {
-    "dev": "dotenv graphql-codegen --config codegen.ts --watch",
-    "codegen": "dotenv graphql-codegen --config codegen.ts",
+    "prebuild": "pnpm codegen:build",
+    "build": "tsup",
+    "dev": "concurrently \"pnpm codegen:watch\" \"tsup --watch\"",
+    "publish-dry": "pnpm build && pnpm publish --dry-run --no-git-checks --ignore-scripts",
+    "publish-next": "pnpm build && pnpm publish --tag next --no-git-checks --ignore-scripts",
+    "publish-latest": "pnpm build && pnpm publish --tag latest --no-git-checks --ignore-scripts",
+    "version:patch": "pnpm version patch --no-git-tag-version",
+    "version:minor": "pnpm version minor --no-git-tag-version",
+    "version:major": "pnpm version major --no-git-tag-version",
+    "version:beta": "pnpm version prerelease --preid beta --no-git-tag-version",
+    "codegen:build": "NODE_ENV=production graphql-codegen --config codegen.ts",
+    "codegen:watch": "NODE_ENV=development dotenv graphql-codegen --config codegen.ts",
     "test": "vitest",
     "lint:fix": "pnpm lint --fix"
   },
-  "files": [
-    "dist/**/*",
-    "src/**/*",
-    "README.md",
-    "LICENSE"
-  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/0xIntuition/intuition-ts",
     "directory": "packages/graphql"
+  },
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
   },
   "dependencies": {
     "@0xintuition/api": "workspace:^",
@@ -44,6 +60,8 @@
     "@graphql-codegen/typescript-react-query": "^6.1.0",
     "@graphql-typed-document-node/core": "^3.2.0",
     "@parcel/watcher": "^2.4.1",
+    "concurrently": "^8.2.2",
+    "tsup": "^6.7.0",
     "typescript": "^5.4.5",
     "vite": "^5.2.11",
     "vitest": "^1.3.1"
