--- a/.github/workflows/deploy_dev.yml
+++ b/.github/workflows/deploy_dev.yml
@@ -103,10 +103,10 @@ jobs:
           --build-arg PHOSPHOR_ADMIN_API_URL=${{ secrets.PHOSPHOR_ADMIN_API_URL }} \
           --build-arg PHOSPHOR_COLLECTION_ID=${{ secrets.PHOSPHOR_COLLECTION_ID }} \
           --build-arg GTM_TRACKING_ID=${{ secrets.GTM_TRACKING_ID }} \
+          --build-arg RELIC_API_URL=${{ secrets.RELIC_API_URL }} \
           --build-arg FF_FULL_LOCKDOWN_ENABLED=false \
           --build-arg FF_GENERIC_BANNER_ENABLED=true \
-          --build-arg FF_INCIDENT_BANNER_ENABLED=false \
-          --build-arg RELIC_API_URL=${{ secrets.RELIC_API_URL }}
+          --build-arg FF_INCIDENT_BANNER_ENABLED=false
           docker tag portal ${{ env.ECR_IMAGE }}
           docker push ${{ env.ECR_IMAGE }}
           rm privy_verification_key.pem
