ENG-5256 fix(portal): fix workflows and dockerfile (#1002)
## Affected Packages

Apps

- [ ] data populator
- [x] portal
- [ ] template

Packages

- [ ] 1ui
- [ ] api
- [ ] graphql
- [ ] protocol
- [ ] sdk

Tools

- [ ] tools

## Overview

Overview of the changes in the PR.

## Screen Captures

If applicable, add screenshots or screen captures of your changes.

## Declaration

- [x] I hereby declare that I have abided by the rules and regulations
as outlined in the
[CONTRIBUTING.md](https://github.com/0xIntuition/intuition-ts/blob/main/CONTRIBUTING.md)

--- a/apps/portal/Dockerfile
+++ b/apps/portal/Dockerfile
@@ -57,7 +57,7 @@ ENV FF_FULL_LOCKDOWN_ENABLED=${FF_FULL_LOCKDOWN_ENABLED}
 ENV FF_INCIDENT_BANNER_ENABLED=${FF_INCIDENT_BANNER_ENABLED}
 ENV FF_GENERIC_BANNER_ENABLED=${FF_GENERIC_BANNER_ENABLED}
 ENV VITE_DEPLOY_ENV=${VITE_DEPLOY_ENV}
-ENV RELIC_API_URL=${RELIC_API_URL}
+ENV RELIC_GRAPHQL_ENDPOINT=${RELIC_GRAPHQL_ENDPOINT}
 
 WORKDIR /app
 
