ENG-5262 feat(portal): update protocol points from legacy api to graphql (#1007)
## Affected Packages

Apps

- [ ] data populator
- [x] portal
- [ ] template

Packages

- [ ] 1ui
- [ ] api
- [ ] graphql
- [ ] protocol
- [ ] sdk

Tools

- [ ] tools

## Overview

Overview of the changes in the PR.

## Screen Captures

If applicable, add screenshots or screen captures of your changes.

## Declaration

- [x] I hereby declare that I have abided by the rules and regulations
as outlined in the
[CONTRIBUTING.md](https://github.com/0xIntuition/intuition-ts/blob/main/CONTRIBUTING.md)

--- a/apps/portal/Dockerfile
+++ b/apps/portal/Dockerfile
@@ -29,6 +29,7 @@ ARG FF_INCIDENT_BANNER_ENABLED=${FF_INCIDENT_BANNER_ENABLED}
 ARG FF_GENERIC_BANNER_ENABLED=${FF_GENERIC_BANNER_ENABLED}
 ARG VITE_DEPLOY_ENV=${VITE_DEPLOY_ENV}
 ARG RELIC_GRAPHQL_ENDPOINT=${RELIC_GRAPHQL_ENDPOINT}
+ARG I7N_GRAPHQL_ENDPOINT=${I7N_GRAPHQL_ENDPOINT}
 
 ENV ALCHEMY_MAINNET_API_KEY=${ALCHEMY_MAINNET_API_KEY}
 ENV ALCHEMY_API_KEY=${ALCHEMY_API_KEY}
@@ -59,7 +60,7 @@ ENV FF_INCIDENT_BANNER_ENABLED=${FF_INCIDENT_BANNER_ENABLED}
 ENV FF_GENERIC_BANNER_ENABLED=${FF_GENERIC_BANNER_ENABLED}
 ENV VITE_DEPLOY_ENV=${VITE_DEPLOY_ENV}
 ENV RELIC_GRAPHQL_ENDPOINT=${RELIC_GRAPHQL_ENDPOINT}
-
+ENV I7N_GRAPHQL_ENDPOINT=${I7N_GRAPHQL_ENDPOINT}
 WORKDIR /app
 
 COPY package.json \
