--- a/.github/workflows/deploy_dev.yml
+++ b/.github/workflows/deploy_dev.yml
@@ -104,6 +104,7 @@ jobs:
           --build-arg PHOSPHOR_COLLECTION_ID=${{ secrets.PHOSPHOR_COLLECTION_ID }} \
           --build-arg GTM_TRACKING_ID=${{ secrets.GTM_TRACKING_ID }} \
           --build-arg RELIC_GRAPHQL_ENDPOINT=${{ secrets.RELIC_GRAPHQL_ENDPOINT }} \
+          --build-arg I7N_GRAPHQL_ENDPOINT=${{ secrets.I7N_GRAPHQL_ENDPOINT }} \
           --build-arg FF_FULL_LOCKDOWN_ENABLED=false \
           --build-arg FF_GENERIC_BANNER_ENABLED=true \
           --build-arg FF_INCIDENT_BANNER_ENABLED=false
