ENG-5279 feat(graphql,sdk): remove api dependencies from sdk and graphql (#1009)
- Removes the inclusion of the `0xintuition/api` package as dependency
in `graphql` and `sdk` packages
- Ran a `pnpm install` afterward so the `pnpm-lock.yaml` change reflects
this
- This resolves installation issues for apps outside of the monorepo
- Note: Leaving it in the `template` and `data-populator` for now
because it's more integrated as part of certain flows. We can remove
these gradually -- don't want to disrupt any working flows at the
moment.

--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@0xintuition/sdk",
-  "version": "0.2.1",
+  "version": "0.3.1",
   "description": "Backend SDK",
   "main": "src/index.js",
   "exports": {
@@ -21,9 +21,7 @@
     "url": "https://github.com/0xIntuition/intuition-ts",
     "directory": "packages/sdk"
   },
-  "dependencies": {
-    "@0xintuition/api": "workspace:^"
-  },
+  "dependencies": {},
   "devDependencies": {
     "typescript": "^5.4.5",
     "vite": "^5.2.11",
