--- a/packages/protocol/package.json
+++ b/packages/protocol/package.json
@@ -1,35 +1,52 @@
 {
   "name": "@0xintuition/protocol",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "Protocol",
-  "main": "src/index.js",
-  "type": "module",
+  "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
   "exports": {
-    ".": "./src/index.js"
-  },
-  "types": "src/index.d.ts",
-  "scripts": {
-    "lint:fix": "pnpm lint --fix",
-    "generate": "node ./scripts/generate.mjs"
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.js"
+    }
   },
   "files": [
-    "dist/**/*",
-    "src/**/*",
-    "README.md",
-    "LICENSE"
+    "dist"
   ],
+  "scripts": {
+    "build": "tsup",
+    "dev": "tsup --watch",
+    "publish-dry": "pnpm build && pnpm publish --dry-run --no-git-checks --ignore-scripts",
+    "publish-next": "pnpm build && pnpm publish --tag next --no-git-checks --ignore-scripts",
+    "publish-latest": "pnpm build && pnpm publish --tag latest --no-git-checks --ignore-scripts",
+    "version:patch": "pnpm version patch --no-git-tag-version",
+    "version:minor": "pnpm version minor --no-git-tag-version",
+    "version:major": "pnpm version major --no-git-tag-version",
+    "version:beta": "pnpm version prerelease --preid beta --no-git-tag-version",
+    "lint:fix": "pnpm lint --fix",
+    "generate": "node ./scripts/generate.mjs",
+    "test": "vitest"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/0xIntuition/intuition-ts",
     "directory": "packages/protocol"
   },
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
+  },
   "dependencies": {
-    "viem": "2.18.8"
+    "viem": "2.21.8"
   },
   "devDependencies": {
     "@viem/anvil": "^0.0.10",
     "typescript": "^5.4.5",
     "vite": "^5.2.11",
-    "vitest": "^1.3.1"
+    "vitest": "^1.3.1",
+    "tsup": "^6.7.0",
+    "concurrently": "^8.2.2"
   }
 }
