--- a/apps/portal/package.json
+++ b/apps/portal/package.json
@@ -44,6 +44,7 @@
     "embla-carousel": "^8.1.3",
     "embla-carousel-react": "^8.1.3",
     "framer-motion": "^11.2.10",
+    "graphql-request": "^7.1.0",
     "isbot": "^4.1.0",
     "jotai": "^2.8.3",
     "react": "^18.2.0",
