ENG-5814 feat(portal): adds new env var to dockerfile and ga workflows for portal (#1101)
- Updates the Portal `Dockerfile` and GitHub Action Workflows with new
ENV var

--- a/apps/portal/Dockerfile
+++ b/apps/portal/Dockerfile
@@ -30,6 +30,7 @@ ARG FF_GENERIC_BANNER_ENABLED=${FF_GENERIC_BANNER_ENABLED}
 ARG VITE_DEPLOY_ENV=${VITE_DEPLOY_ENV}
 ARG RELIC_GRAPHQL_ENDPOINT=${RELIC_GRAPHQL_ENDPOINT}
 ARG I7N_GRAPHQL_ENDPOINT=${I7N_GRAPHQL_ENDPOINT}
+ARG POINTS_GRAPHQL_ENDPOINT=${POINTS_GRAPHQL_ENDPOINT}
 
 ENV ALCHEMY_MAINNET_API_KEY=${ALCHEMY_MAINNET_API_KEY}
 ENV ALCHEMY_API_KEY=${ALCHEMY_API_KEY}
@@ -61,6 +62,8 @@ ENV FF_GENERIC_BANNER_ENABLED=${FF_GENERIC_BANNER_ENABLED}
 ENV VITE_DEPLOY_ENV=${VITE_DEPLOY_ENV}
 ENV RELIC_GRAPHQL_ENDPOINT=${RELIC_GRAPHQL_ENDPOINT}
 ENV I7N_GRAPHQL_ENDPOINT=${I7N_GRAPHQL_ENDPOINT}
+ENV POINTS_GRAPHQL_ENDPOINT=${POINTS_GRAPHQL_ENDPOINT}
+
 WORKDIR /app
 
 COPY package.json \
